Added store links section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,6 +23,8 @@
 
         {{ partial "see_more.html" . }}
 
+        {{ partial "app_links.html" . }}
+
         {{ partial "recent_posts.html" . }}
 
         {{ partial "clients.html" . }}
